auth and create admin
