# pkg/gen/api/auth.pb.go
@@ -141,6 +141,99 @@ func (x *ResponseAuth) GetUsername() string {
 	return ""
 }
 
+type RequestPostAdmin struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Username string `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"` // 账号
+	Password string `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"` // 密码
+}
+
+func (x *RequestPostAdmin) Reset() {
+	*x = RequestPostAdmin{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_http_auth_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *RequestPostAdmin) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*RequestPostAdmin) ProtoMessage() {}
+
+func (x *RequestPostAdmin) ProtoReflect() protoreflect.Message {
+	mi := &file_http_auth_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use RequestPostAdmin.ProtoReflect.Descriptor instead.
+func (*RequestPostAdmin) Descriptor() ([]byte, []int) {
+	return file_http_auth_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *RequestPostAdmin) GetUsername() string {
+	if x != nil {
+		return x.Username
+	}
+	return ""
+}
+
+func (x *RequestPostAdmin) GetPassword() string {
+	if x != nil {
+		return x.Password
+	}
+	return ""
+}
+
+type ResponsePostAdmin struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *ResponsePostAdmin) Reset() {
+	*x = ResponsePostAdmin{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_http_auth_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ResponsePostAdmin) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ResponsePostAdmin) ProtoMessage() {}
+
+func (x *ResponsePostAdmin) ProtoReflect() protoreflect.Message {
+	mi := &file_http_auth_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ResponsePostAdmin.ProtoReflect.Descriptor instead.
+func (*ResponsePostAdmin) Descriptor() ([]byte, []int) {
+	return file_http_auth_proto_rawDescGZIP(), []int{3}
+}
+
 var File_http_auth_proto protoreflect.FileDescriptor
 
 var file_http_auth_proto_rawDesc = []byte{
@@ -156,12 +249,22 @@ var file_http_auth_proto_rawDesc = []byte{
 	0x66, 0x72, 0x65, 0x73, 0x68, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0c, 0x74, 0x6f, 0x6b,
 	0x65, 0x6e, 0x52, 0x65, 0x66, 0x72, 0x65, 0x73, 0x68, 0x12, 0x1a, 0x0a, 0x08, 0x75, 0x73, 0x65,
 	0x72, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x75, 0x73, 0x65,
-	0x72, 0x6e, 0x61, 0x6d, 0x65, 0x32, 0x41, 0x0a, 0x0c, 0x61, 0x75, 0x74, 0x68, 0x5f, 0x73, 0x65,
-	0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x31, 0x0a, 0x08, 0x50, 0x6f, 0x73, 0x74, 0x41, 0x75, 0x74,
-	0x68, 0x12, 0x11, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x41, 0x75, 0x74, 0x68, 0x1a, 0x12, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x52, 0x65, 0x73, 0x70,
-	0x6f, 0x6e, 0x73, 0x65, 0x41, 0x75, 0x74, 0x68, 0x42, 0x0d, 0x5a, 0x0b, 0x70, 0x6b, 0x67, 0x2f,
-	0x67, 0x65, 0x6e, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x72, 0x6e, 0x61, 0x6d, 0x65, 0x22, 0x4a, 0x0a, 0x10, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x50, 0x6f, 0x73, 0x74, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x12, 0x1a, 0x0a, 0x08, 0x75, 0x73, 0x65,
+	0x72, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x75, 0x73, 0x65,
+	0x72, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72,
+	0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x70, 0x61, 0x73, 0x73, 0x77, 0x6f, 0x72,
+	0x64, 0x22, 0x13, 0x0a, 0x11, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x50, 0x6f, 0x73,
+	0x74, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x32, 0x7f, 0x0a, 0x0c, 0x61, 0x75, 0x74, 0x68, 0x5f, 0x73,
+	0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x31, 0x0a, 0x08, 0x50, 0x6f, 0x73, 0x74, 0x41, 0x75,
+	0x74, 0x68, 0x12, 0x11, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x41, 0x75, 0x74, 0x68, 0x1a, 0x12, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x41, 0x75, 0x74, 0x68, 0x12, 0x3c, 0x0a, 0x09, 0x50, 0x6f, 0x73,
+	0x74, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x12, 0x16, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x50, 0x6f, 0x73, 0x74, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x1a, 0x17,
+	0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x50, 0x6f,
+	0x73, 0x74, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x42, 0x0d, 0x5a, 0x0b, 0x70, 0x6b, 0x67, 0x2f, 0x67,
+	0x65, 0x6e, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -176,16 +279,20 @@ func file_http_auth_proto_rawDescGZIP() []byte {
 	return file_http_auth_proto_rawDescData
 }
 
-var file_http_auth_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_http_auth_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_http_auth_proto_goTypes = []interface{}{
-	(*RequestAuth)(nil),  // 0: http.RequestAuth
-	(*ResponseAuth)(nil), // 1: http.ResponseAuth
+	(*RequestAuth)(nil),       // 0: http.RequestAuth
+	(*ResponseAuth)(nil),      // 1: http.ResponseAuth
+	(*RequestPostAdmin)(nil),  // 2: http.RequestPostAdmin
+	(*ResponsePostAdmin)(nil), // 3: http.ResponsePostAdmin
 }
 var file_http_auth_proto_depIdxs = []int32{
 	0, // 0: http.auth_service.PostAuth:input_type -> http.RequestAuth
-	1, // 1: http.auth_service.PostAuth:output_type -> http.ResponseAuth
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	2, // 1: http.auth_service.PostAdmin:input_type -> http.RequestPostAdmin
+	1, // 2: http.auth_service.PostAuth:output_type -> http.ResponseAuth
+	3, // 3: http.auth_service.PostAdmin:output_type -> http.ResponsePostAdmin
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -221,6 +328,30 @@ func file_http_auth_proto_init() {
 				return nil
 			}
 		}
+		file_http_auth_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*RequestPostAdmin); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_http_auth_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*ResponsePostAdmin); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -228,7 +359,7 @@ func file_http_auth_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_http_auth_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
